# evm2cspr

./: .gitignore  Cargo.toml  Makefile  README.md  details.md  overview.md
lib/evmlib/: Cargo.toml
lib/evmlib/src/: api.rs  lib.rs  ops.rs  state.rs
lib/evmlib/src/env/: mod.rs
lib/evmlib/src/near_runtime/: mod.rs
my-project/contract/: Cargo.toml
my-project/tests/: Cargo.toml
my-project/tests/src/: integration_tests.rs
test/: Collatz.sol  SimpleContract.sol  bench.sol  bench_with_writing_in_memory.sol
tools/: bench.py  tests.py
tools/benchmark/: Cargo.toml
tools/benchmark/src/: main.rs
