[package]
name = "tests"
version = "0.1.0"
edition = "2018"

[dev-dependencies]
casper-contract = { version = "3.0.0", default-features = false, features = ["test-support"] }
casper-engine-test-support = { version = "5.0.0", features = ["test-support"] }
casper-execution-engine = "5.0.0"
casper-types = "3.0.0"

[[bin]]
name = "integration-tests"
path = "src/integration_tests.rs"
bench = false
doctest = false

